--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
