--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.1",
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
