--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,15 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.11",
     "axios": "^1.3.4",
     "daisyui": "^2.51.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
+    "remove": "^0.1.5",
+    "sweetalert2": "^11.7.3",
     "yup": "^1.0.1"
   },
   "devDependencies": {
