--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "remove": "^0.1.5",
     "sweetalert2": "^11.7.3",
     "yup": "^1.0.1"
