--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "ummar farooq",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "nodemailer": "^6.9.1",
